[package]
name = "kernel-asound-sys"
version = "0.1.2"
authors = ["David Henningsson <coding@diwic.se>"]
description = "ALSA kernel bindings (bindgen generated). You probably want the ALSA crate instead."
edition = "2018"
readme = "README.md"
repository = "https://github.com/diwic/kernel-asound-sys"
documentation = "http://docs.rs/kernel-asound-sys"
keywords = ["ALSA"]
license = "Apache-2.0/MIT"
categories = ["os::unix-apis", "external-ffi-bindings"]

[dependencies]
nix = "0.20"

[build-dependencies]
bindgen = "0.57.0"
regex = "1"
